# signals-provider

./: CMakeLists.txt  asynctaskprocessor.cpp  asynctaskprocessor.h  base_types.h  bufferedreader.cpp  bufferedreader.h  compiler_ext.h  converter.cpp  converter.h  frameprocessor.cpp  frameprocessor.h  framereader.cpp  framereader.h  idatasource.h  isignalreceiver.h  main.cpp  print.cpp  print.h  signallogger.cpp  signallogger.h  signalprovider.cpp  signalprovider.h  signalstorage.cpp  signalstorage.h  testdatasource.cpp  testdatasource.h
uml/: signals-provider.puml
